- Fixed search-results container overlay overflow issue on mobile view.

--- a/src/sass/_searchResults.scss
+++ b/src/sass/_searchResults.scss
@@ -13,29 +13,9 @@
   z-index: 1;
   visibility: hidden;
 
-  &::after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    background-color: rgba(0, 0, 0, .4);
-    backdrop-filter: blur(4px);
-    transition: $transition-duration-m;
-    transition-property: opacity, visibility;
-    opacity: 0;
-    visibility: hidden;
-  }
-
   &.active {
     transform: translateX(0);
     visibility: visible;
-
-    &::after {
-      left: 100%;
-      opacity: 1;
-      visibility: visible;
-    }
   }
 
   .skip-to-recipe {
@@ -76,6 +56,26 @@
 
   @media only screen and (min-width: $bp-small) {
     width: 60vw;
+
+    &::after {
+      content: '';
+      width: 40vw;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      background-color: rgba(0, 0, 0, .4);
+      backdrop-filter: blur(4px);
+      transition: $transition-duration-m;
+      transition-property: opacity, visibility;
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    &.active::after {
+      left: 100%;
+      opacity: 1;
+      visibility: visible;
+    }
   }
 
   @media only screen and (min-width: $bp-medium) {
